# timesheeting

./: .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  TODOs-archive.org  TODOs.org  annotated.html  bar__ncurses_8h.html  bar__ncurses_8h_source.html  binding__maps_8h_source.html  bound__keys_8h.html  bound__keys_8h_source.html  classBarNCurses-members.html  classBarNCurses.html  classBoundKeys-members.html  classBoundKeys.html  classCSVExporter-members.html  classCSVExporter.html  classColumn-members.html  classColumn.html  classColumnBase-members.html  classColumnBase.html  classColumnEmpty-members.html  classColumnEmpty.html  classColumnInterface-members.html  classColumnInterface.html  classColumnInterfaceBase-members.html  classColumnInterfaceBase.html  classColumnNcurses-members.html  classColumnNcurses.html  classConfigLoader-members.html  classConfigLoader.html  classDBLogicExcept-members.html  classDBLogicExcept.html  classDB__Interface-members.html  classDB__Interface.html  classDB__SQLite-members.html  (+530 more)
.github/workflows/: doxygen-gh-pages.yml
custom_menu/: CMakeLists.txt
custom_menu/src/: main.cpp  menu_ncurses.cpp  menu_ncurses.h  win_ncurses.cpp  win_ncurses.h
doc/: .gitignore  Dockerfile  RELEASE_NOTES.md  spec.org
doc/glossary/: glossary.tex
doc/irs/: biblio.bib  irs.tex  preamble.tex
doc/sad/: .gitignore  biblio.bib  preamble.tex  sad.tex
doc/sdd/: .gitignore  biblio.bib  sdd.tex
doc/spec/: .gitignore  biblio.bib  main.tex  preamble.tex  spec.tex
doc/srd/: .gitignore  biblio.bib  latexmkrc  preamble.tex  srd.tex
doc/tst/: .gitignore  preamble.tex  tst.tex
doxygen/: annotated.html  bar__ncurses_8h.html  bar__ncurses_8h_source.html  binding__maps_8h_source.html  bound__keys_8h.html  bound__keys_8h_source.html  classconfig_1_1BindingMap-members.html  classconfig_1_1BindingMap.html  classconfig_1_1ConfigLoader-members.html  classconfig_1_1ConfigLoader.html  classconfig__lib_1_1TomlLoader-members.html  classconfig__lib_1_1TomlLoader.html  classdb_1_1DB__SQLite-members.html  classdb_1_1DB__SQLite.html  classdb_1_1StatementSet-members.html  classdb_1_1StatementSet.html  classdb__lib_1_1DB__SQLite__Connection-members.html  classdb__lib_1_1DB__SQLite__Connection.html  classdb__lib_1_1DB__SQLite__Handle-members.html  classdb__lib_1_1DB__SQLite__Handle.html  classdb__lib_1_1SQLiteConstraintExcept-members.html  classdb__lib_1_1SQLiteConstraintExcept.html  classdb__lib_1_1Statement-members.html  classdb__lib_1_1Statement.html  classes.html  classexporter_1_1CSVExporter-members.html  classexporter_1_1CSVExporter.html  classkeys_1_1BoundKeys-members.html  classkeys_1_1BoundKeys.html  classlog__lib_1_1Logger-members.html  classlog__lib_1_1Logger.html  classlog__lib_1_1TempDir-members.html  classlog__lib_1_1TempDir.html  classncurses__lib_1_1BarNCurses-members.html  classncurses__lib_1_1BarNCurses.html  classncurses__lib_1_1MenuEmpty-members.html  classncurses__lib_1_1MenuEmpty.html  classncurses__lib_1_1MenuNCurses-members.html  classncurses__lib_1_1MenuNCurses.html  classncurses__lib_1_1NcursesHandle-members.html  (+323 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_b.js  classes_d.js  enums_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_e.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_13.js  (+24 more)
lcov/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
libs/db_lib/: db_sqlite_handle.cpp  statement.h
libs/log_lib/: logger.cpp  logger.h
libs/ncurses_lib/: bar_ncurses.cpp  bar_ncurses.h  menu_ncurses.h  ncurses_handle.h  win_ncurses.cpp  win_ncurses.h
libs/time_lib/: date.cpp  date_range.cpp  day.cpp  duration.cpp  duration_displayer.cpp  duration_displayer.h  time_zone.cpp  time_zone.h
modules/config/: config.cpp  config.h
modules/core/: entry.cpp  entry_staging.cpp  entry_staging.h  export_row.cpp  export_row.h  generic_item.h  project_total.cpp  project_total.h  weekly_totals.cpp  weekly_totals.h
modules/db/: statement_set.cpp
modules/exporter/: csv_exporter.cpp
modules/version/: version.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+69 more)
src/: about.cpp  about.h  application.cpp  application.h  bar_ncurses.cpp  bar_ncurses.h  bound_keys.cpp  bound_keys.h  cli.cpp  cli.h  cli_manager.cpp  cli_manager.h  column.cpp  column.h  column_base.h  column_interface.h  column_ncurses.h  config.cpp  config.h  csv_exporter.cpp  csv_exporter.h  data_objects.h  date.cpp  date.h  date_range.h  date_selector_interface.h  date_selector_ncurses.cpp  date_selector_ncurses.h  db_interface.cpp  db_interface.h  db_sqlite.cpp  db_sqlite.h  db_sqlite_handle.cpp  duration_displayer.cpp  duration_displayer.h  entries_table.h  examplewindow.cpp  examplewindow.h  globals.h  logger.cpp  (+30 more)
src/column/: column_ncurses.h
src/data_objects/: data_objects.h  date.cpp  date.h  date_range.cpp  date_range.h  day.cpp  day.h  duration.cpp  duration.h  entry.cpp  entry.h  entry_staging.cpp  entry_staging.h  export_row.cpp  export_row.h  generic_item.h  id.h  key.h  project_total.cpp  project_total.h  week.cpp  week.h  weekly_totals.cpp  weekly_totals.h
src/db/: db_sqlite.cpp  db_sqlite.h  db_sqlite_handle.cpp  db_sqlite_handle.h  statement.cpp  statement.h  statement_set.cpp  statement_set.h
src/gui/: topwindow.h
src/logger/: logger.cpp  (+3 more)
test/: Dockerfile  coverage.Dockerfile  test_main.h
(+833 files in other folders)
